# digital-membership

./: .gcloudignore  .gitattributes  .gitignore  Dockerfile  README.md  cloudbuild-statics.yaml  cloudbuild.yaml  cloudfunction.py  docker-compose.yml  gen_certs.sh  justfile  lv-digital-membership.tfvars  main.py  populate_db.py  pyproject.toml  query_db.py  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  run_app.py  serve_site.py  waypoint.hcl  wsgi.py
.github/: CODEOWNERS
.github/linters/: . htmlhintrc  .hadolint.yaml  .isort.cfg  .python-lint  .stylelintrc.json  .yaml-lint.yml
.github/workflows/: cloudbuild.yml  deploy.yml  deploy_infrastrcture.yml  flask_command.yml  image_build_and_publish.yml  just_cloudbuild.yml  lint.yml  lint_and_test.yml  main.yml  run_tests.yml  sync_subscriptions.yml
config/: gunicron_logging.ini
member_card/: __init__.py  annual_membership.py  app.py  bigcommerce.py  cli.py  cloudbuild.py  commands.py  db.py  exceptions.py  gcp.py  gpay.py  image.py  minibc.py  monitoring.py  passes.py  pubsub.py  secrets.py  sendgrid.py  settings.py  slack.py  sqlite_db.py  squarespace.py  storage.py  utils.py  worker.py
member_card/certificates/: certificate.pem
member_card/models/: __init__.py  annual_membership.py  apple_device_registration.py  apple_pass.py  membership_card.py  membershp_card.py  slack_user.py  squarespace_webhook.py  store.py  store_user.py  subscription.py  table_metadata.py  user.py
member_card/passes/: __init__.py  apple_wallet.py  gpay.py
member_card/routes/: __init__.py  bigcommerce.py  passkit.py  (+1 more)
migrations/: env.py  script.py.mako
scripts/: bootstrap_db_acls.sh  cloudbuild.py  docker-entrypoint.sh  gen_certs.sh  passkit_tests.sh  test_squarespace_webhook.sh
terraform/: .env  .terraform.lock.hcl  cloud_functions.tf  cloud_run_service.tf  cloud_sql_db.tf  cloud_storage.tf  gcp_project.tf  github.tf  iam.tf  main.tf  outputs.tf  pubsub.tf  scheduler.tf  secrets.tf  variables.tf
tests/: conftest.py  test_app.py  test_bigcommerce.py  test_bigcommerce_client.py  test_bigcommerce_routes.py  test_commands.py  test_db.py  test_gcp.py  test_image.py  test_minibc.py  test_monitoring.py  test_passes.py  test_pubsub.py  test_secrets.py  test_sendgrid.py  test_slack.py  test_squarespace.py  test_things.py  test_worker.py  utils.py
widget_workshop/: README.md  package-lock.json
(+78 files in other folders)
