[tool.poetry]
name = "digital-membership"
version = "0.1.0"
description = "Digital membership card website with membership database populated from online storefronts."
authors = ["Los Verdes <oss-hasta-la-muerte@losverd.es>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{ include = "member_card" }]
# packages = [{ include = "member_card" }] TODO: update to match the default value (i.e., name.replace('-', '_')

[tool.poetry.dependencies]
python = "~3.9"
bigcommerce = "^0.23.2"
cloud-sql-python-connector = { extras = ["pg8000"], version = "^1.2.2" }
codetiming = "^1.4.0"
email-validator = "^2.0.0.post2"
flask-assets = "^2.0"
flask-cdn = "^1.5.3"
flask-gravatar = "^0.5.0"
flask-login = ">=0.6.2"
flask-migrate = "^4.0.4"
flask-security = "^3.0.0"
google-cloud-logger = "^0.2.1"
google-auth = "^2.17.3"
google-cloud-firestore = "^2.11.0"
google-cloud-logging = "^3.5.0"
google-cloud-pubsub = "^2.16.0"
google-cloud-secret-manager = "^2.16.1"
google-cloud-storage = "^2.8.0"
gunicorn = "^20.1.0"
html2image = "^2.0.3"
libsass = "^0.22.0"
opentelemetry-exporter-gcp-trace = "^1.4.0"
opentelemetry-instrumentation-flask = "^0.38b0"
opentelemetry-instrumentation-requests = "^0.38b0"
opentelemetry-instrumentation-wsgi = "^0.38b0"
opentelemetry-propagator-gcp = "^1.4.0"
psycopg2-binary = "^2.9.6"
python-dateutil = "^2.8.2"
python-jose = "^3.3.0"
qrcode = { extras = ["pil"], version = "^7.4.2" }
requests = "^2.28.2"
sendgrid = "^6.10.0"
slack-bolt = "^1.17.2"
slack-sdk = "^3.21.2"
social-auth-app-flask = "^1.0.0"
social-auth-app-flask-sqlalchemy = "^1.0.1"
wallet-py3k = "^0.0.4"
flask-cors = "^3.0.10"
# We have these pinned to match our previous pip-compile managed "lock"
# TODO: update once the migration-to-poetry duest has settled...
flask = "2.0.2"
sqlalchemy = "1.4.25"
werkzeug = "2.0.2"
flask-recaptcha = "0.4.2"
markupsafe = "2.0.1"
jinja2 = "3.0.3"


[tool.poetry.group.test.dependencies]
bs4 = "^0.0.1"
mock = "^5.0.2"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-github-report = "^0.0.1"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"
ruff = "^0.0.267"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 180
